@@ -13,8 +13,6 @@ import qualified Git
 import qualified Git.Command
 import qualified Git.Ref
 import qualified Git.Branch
-import Types.MetaData
-import Annex.MetaData
 import Types.View
 import Annex.View
 import Logs.View
@@ -45,18 +43,6 @@ perform view = do
 
 paramView :: String
 paramView = paramPair (paramRepeating "TAG") (paramRepeating "FIELD=VALUE")
-
-{- Parse field=value
- -
- - Note that the field may not be a legal metadata field name,
- - but it's let through anyway.
- - This is useful when matching on directory names with spaces,
- - which are not legal MetaFields.
- -}
-parseViewParam :: String -> (MetaField, String)
-parseViewParam s = case separate (== '=') s of
-	(tag, []) -> (tagMetaField, tag)
-	(field, wanted) -> (mkMetaFieldUnchecked field, wanted)
 
 mkView :: [String] -> Annex View
 mkView params = do
