@@ -723,7 +723,7 @@ subdirectories).
 
         	git annex metadata annexscreencast.ogv -t video -t screencast -s author+=Alice
 
-* `view [tag ...] [field=value ...] [location/=value]`
+* `view [tag ...] [field=value ...] [field=glob ...] [!tag ...] [field!=value ...]`
 
   Uses metadata to build a view branch of the files in the current branch,
   and checks out the view branch. Only files in the current branch whose
@@ -754,12 +754,12 @@ subdirectories).
 
   The optional number tells how many views to pop.
 
-* `vfilter [tag ...] [field=value ...] [location/=value]`
+* `vfilter [tag ...] [field=value ...] [!tag ...] [field!=value ...]`
 
   Filters the current view to only the files that have the
-  specified field values, tags, and locations.
+  specified field values and tags.
 
-* `vadd [field=glob ...] [location/=glob]`
+* `vadd [field=glob ...]`
 
   Changes the current view, adding an additional level of directories
   to categorize the files.
